--- a/week2/index.html
+++ b/week2/index.html
@@ -150,6 +150,10 @@
             <h3>Chapter 4 - JavaScript: Novice to Ninja</h3>
             <a href = "exercise3.html">Exercise 3</a>
         </section>
+        <section>
+            <h2>Team Activity for Week 2</h2>
+            <a href = "team-activity.html">Team Activity</a>
+        </section>
     </main>
 </body>
 </html>
