--- a/week4/index.html
+++ b/week4/index.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 4</title>
     <link rel = "stylesheet" href = "css/style1.css">
+    <style>
+        table {
+            border-collapse: collapse;
+
+        }
+        td {
+            border: 1px solid black;
+            padding: 20px;
+        }
+        table tr:first-child td {
+            border-top: 1px solid white;
+        }
+        table tr:last-child td {
+            border-bottom: 1px solid white;
+        }
+        tr td:first-child {
+            border-left: 1px solid white;
+        }
+        tr td:last-child {
+            border-right: 1px solid white;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -276,9 +298,6 @@
                 </div>
             </div>
             <h3>Chapter 12 - JavaScript: Novice to Ninja</h3>
-        </section>
-        <section>
-            <h2>Team Activity for Week 3</h2>
             <div class = "dojo1">
                 <div class = "quiz-body1">
                     <div>
@@ -294,8 +313,58 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h2>Team Activity for Week 3</h2>
+            <h3>Board</h3>
+            <table class = "board">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+            <button id = "reset">Reset Board</button>
+        </section>
     </main>
     <!-- <script src = "js/script1.js"></script> -->
     <script src = "js/script2.js"></script>
+    <script>
+        let board = document.querySelector('.board');
+        let button = document.getElementById('reset');
+        let player = 1;
+        const player1 = 'x'
+        const player2 = 'o'
+        function addSpot(e) {
+            if (e.target.textContent == ""){     
+                if (player == 1){
+                    e.target.textContent = player1;
+                    player = 2;
+                } else {
+                    e.target.textContent = player2;
+                    player = 1;
+                }
+            }
+        }
+        function resetBoard(){
+            for (i = 0; i < 3; i++){
+                for (j = 0; j < 3; j++){
+                    board.children[0].children[i].children[j].textContent = " ";
+                }
+            }
+            console.log('reset board');
+        }
+        board.addEventListener('click', addSpot);
+        button.addEventListener('click', resetBoard);
+    </script>
 </body>
 </html>
